--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -4,6 +4,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <jp.co.recruit_lifestyle.android.widget.WaveSwipeRefreshLayout
+        android:id="@+id/sea_swipe"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ListView
+            android:id="@+id/sea_listview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="37dp" />
+    </jp.co.recruit_lifestyle.android.widget.WaveSwipeRefreshLayout>
+
     <LinearLayout
         android:id="@+id/sea_noweb"
         android:layout_width="match_parent"
@@ -11,6 +23,7 @@
         android:gravity="center"
         android:orientation="vertical"
         android:paddingBottom="33dp"
+        android:paddingTop="32dp"
         android:visibility="gone">
 
         <ImageView
@@ -26,18 +39,6 @@
             android:textSize="13sp" />
 
     </LinearLayout>
-
-    <jp.co.recruit_lifestyle.android.widget.WaveSwipeRefreshLayout
-        android:id="@+id/sea_swipe"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <ListView
-            android:id="@+id/sea_listview"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="37dp" />
-    </jp.co.recruit_lifestyle.android.widget.WaveSwipeRefreshLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
