--- a/app/src/main/res/layout/activity_videodetails.xml
+++ b/app/src/main/res/layout/activity_videodetails.xml
@@ -113,7 +113,7 @@
                             android:clickable="true"
                             android:descendantFocusability="blocksDescendants"
                             android:gravity="center_horizontal"
-                            android:onClick="clickPlay"
+                            android:onClick="clickCover"
                             android:orientation="vertical"
                             android:padding="3dp">
 
@@ -165,6 +165,7 @@
                             android:clickable="true"
                             android:descendantFocusability="blocksDescendants"
                             android:gravity="center_horizontal"
+                            android:onClick="clickCoverLater"
                             android:orientation="vertical"
                             android:padding="3dp">
 
@@ -190,6 +191,7 @@
                             android:clickable="true"
                             android:descendantFocusability="blocksDescendants"
                             android:gravity="center_horizontal"
+                            android:onClick="clickHistory"
                             android:orientation="vertical"
                             android:padding="3dp">
 
@@ -232,6 +234,7 @@
                             android:clickable="true"
                             android:descendantFocusability="blocksDescendants"
                             android:gravity="center_horizontal"
+                            android:onClick="clickLike"
                             android:orientation="vertical"
                             android:padding="3dp">
 
@@ -260,6 +263,7 @@
                             android:clickable="true"
                             android:descendantFocusability="blocksDescendants"
                             android:gravity="center_horizontal"
+                            android:onClick="clickCoin"
                             android:orientation="vertical"
                             android:padding="3dp">
 
@@ -288,6 +292,7 @@
                             android:clickable="true"
                             android:descendantFocusability="blocksDescendants"
                             android:gravity="center_horizontal"
+                            android:onClick="clickFav"
                             android:orientation="vertical"
                             android:padding="3dp">
 
@@ -316,6 +321,7 @@
                             android:clickable="true"
                             android:descendantFocusability="blocksDescendants"
                             android:gravity="center_horizontal"
+                            android:onClick="clickDislike"
                             android:orientation="vertical"
                             android:padding="3dp">
 
@@ -343,11 +349,13 @@
                 android:id="@+id/vd_card"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:layout_marginTop="6dp"
                 android:clickable="true"
                 android:descendantFocusability="blocksDescendants"
+                android:paddingBottom="10dp"
                 app:cardCornerRadius="4dp"
                 app:cardElevation="6dp">
 
@@ -397,6 +405,8 @@
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/vd_card_name"
                         android:layout_marginLeft="5dp"
+                        android:layout_marginRight="2dp"
+                        android:layout_toLeftOf="@+id/vd_card_button"
                         android:layout_toRightOf="@+id/vd_card_head"
                         android:ellipsize="end"
                         android:maxLines="1"
