--- a/app/src/main/res/layout/item_favor_video.xml
+++ b/app/src/main/res/layout/item_favor_video.xml
@@ -30,32 +30,23 @@
             android:layout_height="wrap_content"
             android:singleLine="true"
             android:text="bivuivfvfvfvf"
-            android:textColor="#222222"
-            android:textSize="13sp" />
+            android:textColor="#222222" />
 
         <TextView
             android:id="@+id/vid_up"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="UP"
-            android:textSize="11sp" />
+            android:text="UP:luern0313"
+            android:textSize="10sp" />
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/vid_play"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/vid_play"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="12346"
-                android:textSize="10sp" />
-
+            android:text="12.3万播放"
+            android:textSize="10sp" />
 
         </LinearLayout>
-
-    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/vid_novidlayout"
