--- a/app/src/main/res/layout/activity_img.xml
+++ b/app/src/main/res/layout/activity_img.xml
@@ -5,6 +5,7 @@
     android:background="@color/black">
 
     <android.support.v4.view.ViewPager
+        android:id="@+id/img_viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
