--- a/app/src/main/res/layout/item_favor_video.xml
+++ b/app/src/main/res/layout/item_favor_video.xml
@@ -4,8 +4,10 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:descendantFocusability="blocksDescendants"
+    android:paddingBottom="1dp"
     android:paddingLeft="19dp"
-    android:paddingRight="19dp">
+    android:paddingRight="19dp"
+    android:paddingTop="1dp">
 
     <ImageView
         android:id="@+id/vid_img"
@@ -30,7 +32,8 @@
             android:layout_height="wrap_content"
             android:singleLine="true"
             android:text="bivuivfvfvfvf"
-            android:textColor="#222222" />
+            android:textColor="@color/textcolor3"
+            android:textSize="13sp" />
 
         <TextView
             android:id="@+id/vid_up"
@@ -46,7 +49,7 @@
             android:text="12.3万播放"
             android:textSize="10sp" />
 
-        </LinearLayout>
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/vid_novidlayout"
