--- a/app/src/main/res/layout/item_imgviewpager.xml
+++ b/app/src/main/res/layout/item_imgviewpager.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/vp_imageView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@drawable/img_default_imgviewpaper" />
