--- a/app/src/main/res/layout/item_favor_box.xml
+++ b/app/src/main/res/layout/item_favor_box.xml
@@ -64,6 +64,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/favor_see"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="6dp"
