--- a/app/src/main/res/layout/activity_favorvideo.xml
+++ b/app/src/main/res/layout/activity_favorvideo.xml
@@ -1,42 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-    <LinearLayout
-        android:id="@+id/dy_nologin"
+    <RelativeLayout
+        android:id="@+id/favv_title_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/activityBG"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:paddingBottom="33dp"
-        android:visibility="gone">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="92dp"
-            android:padding="6dp"
-            android:src="@drawable/img_nologin" />
+        android:layout_height="wrap_content"
+        android:background="@color/mainColor"
+        android:gravity="center_vertical"
+        android:paddingBottom="4dp"
+        android:paddingTop="10dp">
 
         <TextView
+            android:id="@+id/favv_title_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="你好像还没有登录...\n点上面的按钮试试吧"
-            android:textSize="13sp" />
+            android:layout_centerHorizontal="true"
+            android:text="收藏夹"
+            android:textColor="@color/textColor" />
 
-
-    </LinearLayout>
+        <ImageView
+            android:id="@+id/favv_title_extraicon"
+            android:layout_width="12dp"
+            android:layout_height="19dp"
+            android:layout_marginLeft="2dp"
+            android:layout_toLeftOf="@+id/favv_title_title"
+            android:rotation="90"
+            android:src="@drawable/icon_extra" />
+    </RelativeLayout>
 
     <LinearLayout
-        android:id="@+id/dy_noweb"
+        android:id="@+id/favv_noweb"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@+id/favv_title_layout"
         android:background="@color/activityBG"
         android:gravity="center"
         android:orientation="vertical"
-        android:paddingBottom="33dp"
+        android:paddingBottom="20dp"
         android:visibility="gone">
 
         <ImageView
@@ -53,13 +55,14 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/dy_nonthing"
+        android:id="@+id/favv_nonthing"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/activityBG"
+        android:layout_below="@+id/favv_title_layout"
+        android:background="@color/textColor"
         android:gravity="center"
         android:orientation="vertical"
-        android:paddingBottom="33dp"
+        android:paddingBottom="20dp"
         android:visibility="gone">
 
         <ImageView
@@ -76,15 +79,17 @@
     </LinearLayout>
 
     <jp.co.recruit_lifestyle.android.widget.WaveSwipeRefreshLayout
-        android:id="@+id/dy_swipe"
+        android:id="@+id/favv_swipe"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_below="@+id/favv_title_layout">
 
         <ListView
-            android:id="@+id/dy_listview"
+            android:id="@+id/favv_listview"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:divider="@color/alphe"
+            android:dividerHeight="2dp" />
     </jp.co.recruit_lifestyle.android.widget.WaveSwipeRefreshLayout>
-
 
 </RelativeLayout>
