--- a/app/src/main/res/layout/fragment_favor.xml
+++ b/app/src/main/res/layout/fragment_favor.xml
@@ -49,6 +49,29 @@
             android:textSize="13sp" />
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/fav_nonthing"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/activityBG"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:paddingBottom="33dp"
+        android:visibility="gone">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="94dp"
+            android:padding="6dp"
+            android:src="@drawable/img_nodata" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="这里什么也没有. . ." />
+
+    </LinearLayout>
+
     <jp.co.recruit_lifestyle.android.widget.WaveSwipeRefreshLayout
         android:id="@+id/fav_swipe"
         android:layout_width="match_parent"
